# CompetitiveSketchAgent

./: README.md  environment.yml  mac_environment.yml  pyproject.toml
competitive_sketch_agent/: sketch_generator.py  utils.py
competitive_sketch_agent/configs/: default_config.yaml
notebooks/: EDA.ipynb
